--- a/dummy-logger/.kubernetes/deployment.yaml
+++ b/dummy-logger/.kubernetes/deployment.yaml
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
         - name: my-container
-          image: ematos/dummy-logger:2.0
+          image: rampss/dummy-logger:2.0
